--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,9 +1,9 @@
-#driver=com.mysql.jdbc.Driver
-#url=jdbc:mysql://192.168.100.107:3306/dev?useUnicode=true&characterEncoding=utf8
-#username=root
-#password=root
-
 driver=com.mysql.jdbc.Driver
-url=jdbc:mysql://192.168.10.20:3306/ctl_logdb?useUnicode=true&characterEncoding=utf8
-username=kettle_etl
-password=kettle_etl123
+url=jdbc:mysql://192.168.100.107:3306/dev?useUnicode=true&characterEncoding=utf8
+username=root
+password=root
+
+#driver=com.mysql.jdbc.Driver
+#url=jdbc:mysql://192.168.10.20:3306/ctl_logdb?useUnicode=true&characterEncoding=utf8
+#username=kettle_etl
+#password=kettle_etl123
